--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ input.src:hover{
 .element{
 	font-size: 1em;
 	height: 25%;
-	background: url("/images/muro.jpg") center / 100% 100% no-repeat;
+	background: url("/images/muro.png") center / 100% 100% no-repeat;
 
 }
 
@@ -81,7 +81,7 @@ input.src:hover{
  
 }
 .menu-link:hover{
-	color: white;
+	color: rgb(0, 0, 0);
 }
 .menu .menu-item{
 	text-decoration: none;
